

cmake_minimum_required (VERSION 3.18)

set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/install CACHE FILEPATH "install place")

project (CFD_Externals C)

add_subdirectory(repos/zlib)

set(BUILD_TESTING OFF CACHE BOOL "Build HDF5 Unit Testing")
set(HDF5_ENABLE_PARALLEL ON CACHE BOOL "HDF5_ENABLE_PARALLEL")
set(HDF5_ENABLE_Z_LIB_SUPPORT ON CACHE BOOL "HDF5_ENABLE_Z_LIB_SUPPORT")

#off with all the tests; observed missing of cmake variable HDF5_TEST_PAR_BINARY_DIR
set(HDF5_TEST_TOOLS OFF CACHE BOOL "HDF5_TEST_TOOLS" )
set(HDF5_TEST_SWMR OFF CACHE BOOL "HDF5_TEST_SWMR" )
set(HDF5_TEST_JAVA OFF CACHE BOOL "HDF5_TEST_JAVA" )
set(HDF5_TEST_FORTRAN OFF CACHE BOOL "HDF5_TEST_FORTRAN" )
set(HDF5_TEST_EXAMPLES OFF CACHE BOOL "HDF5_TEST_EXAMPLES" )
set(HDF5_TEST_PARALLEL OFF CACHE BOOL "HDF5_TEST_PARALLEL" )
set(HDF5_TEST_SERIAL OFF CACHE BOOL "HDF5_TEST_SERIAL" )
set(HDF5_TEST_CPP OFF CACHE BOOL "HDF5_TEST_CPP" )

# # why does this disable some exports in hdf5?
set(HDF5_EXTERNALLY_CONFIGURED ON CACHE INTERNAL "")

set(ZLIB_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR}/repos/zlib)
set(ZLIB_LIBRARY_DEBUG zlibstatic)
set(ZLIB_LIBRARY_RELEASE zlibstatic)

add_subdirectory(repos/hdf5)

# deal with hijacking of hdf5's cmake
# set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/install CACHE FILEPATH "install place" FORCE)

# set(HDF5_LIBRARIES hdf5-shared)
# set(HDF5_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/repos/hdf5/src)


# https://github.com/CGNS/CGNS/discussions/363, modern way of add_subdirectory?
# set(HDF5_DIR ${CMAKE_CURRENT_BINARY_DIR}/repos/hdf5/CMakeFiles)
set(HDF5_DIR ${CMAKE_CURRENT_SOURCE_DIR}/repos/hdf5)

set(CGNS_BUILD_SHARED OFF CACHE BOOL "CGNS_BUILD_SHARED")
set(CGNS_ENABLE_HDF5 ON CACHE BOOL "CGNS_ENABLE_HDF5")
set(CGNS_ENABLE_LFS ON CACHE BOOL "CGNS_ENABLE_LFS")
set(CGNS_ENABLE_PARALLEL ON CACHE BOOL "CGNS_ENABLE_PARALLEL")

set(HDF5_NEED_MPI ON CACHE BOOL "HDF5_NEED_MPI")
set(HDF5_NEED_ZLIB ON CACHE BOOL "HDF5_NEED_ZLIB")
set(ZLIB_LIBRARY zlibstatic)
set(CMAKE_BUILD_TYPE "Release" cache "override for msvc build")
add_subdirectory(repos/cgns)